--- a/Day17 - Movie App/index.html
+++ b/Day17 - Movie App/index.html
@@ -13,46 +13,7 @@
             </form>
           </header>
       
-          <main id="main">
-            <div class="movie">
-                <img src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiojEyMDd9&auto=format&fit=crop&w=1154&q=80" 
-                    alt="">
-                <div class="movie-info">
-                    <h3>Movie Title</h3>
-                    <span class="green">9</span>
-                </div>
-                <div class="overview">
-                    <h3>Overview</h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure deleniti sint repudiandae atque quibusdam quidem illo! Earum, nam doloremque. Atque quam molestiae ipsa perferendis quaerat possimus, vero ducimus blanditiis numquam.
-                </div>
-            </div>
-
-            <div class="movie">
-                <img src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiojEyMDd9&auto=format&fit=crop&w=1154&q=80" 
-                    alt="">
-                <div class="movie-info">
-                    <h3>Movie Title</h3>
-                    <span class="green">9</span>
-                </div>
-                <div class="overview">
-                    <h3>Overview</h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure deleniti sint repudiandae atque quibusdam quidem illo! Earum, nam doloremque. Atque quam molestiae ipsa perferendis quaerat possimus, vero ducimus blanditiis numquam.
-                </div>
-            </div>
-
-            <div class="movie">
-                <img src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiojEyMDd9&auto=format&fit=crop&w=1154&q=80" 
-                    alt="">
-                <div class="movie-info">
-                    <h3>Movie Title</h3>
-                    <span class="green">9</span>
-                </div>
-                <div class="overview">
-                    <h3>Overview</h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure deleniti sint repudiandae atque quibusdam quidem illo! Earum, nam doloremque. Atque quam molestiae ipsa perferendis quaerat possimus, vero ducimus blanditiis numquam.
-                </div>
-            </div>
-          </main>
+          <main id="main"></main>
 
         <script src="js/script.js"></script>
 	</body>
